# STEPS

./: CONTRIBUTING.md  Cargo.toml
cli/: Cargo.toml
core/: Cargo.toml
core/src/: cfg.rs
core/src/io/: input_parsing.rs
core/src/sim/: distr.rs  kernels.rs  mechanics.rs  mod.rs  sequencing.rs  summarize.rs  types.rs
